Ajout du changement bouton upload

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -10,6 +10,7 @@
 	<meta name="description" content="">
 	<link rel="stylesheet" href="./assets/style.css">
 </head>
+
 <div id="editMode" class="editionMode">
 	<img src="assets/icons/Vector.png"><a href="#">Mode édition</a>
 </div>
@@ -46,7 +47,7 @@
 			</div>
 		</div>
 		
-	
+		<!-- Modal UPLOAD -->
 	
 		<aside id="modal1" class="modal" aria-hidden="true" style="display: none;">
 			<div class="modal-wrapper js-modal-stop">
@@ -77,7 +78,7 @@
 			</div>
 		</aside>
 		  
-		  
+		<!-- Modal gallery2 -->
 
 	  <aside id="modal2" class="modal" aria-hidden="true" style="display: none;">
 		<div class="modal-wrapper js-modal-stop">
@@ -90,11 +91,13 @@
 			<button id="openModal2" class="js-modal" data-target="#modal1">Ajouter une photo</button>
 		</div>
 	  </aside>
-	  
-	
+
+	  	<!-- Filtres -->
 		<div class="filters" id="categoryButtons"></div>
-		<div class="gallery" id="gallery">	
-		</div>
+
+		<!-- Gallerie -->
+		<div class="gallery" id="gallery"></div>
+
 	</section>
 	<section id="contact">
 		<h2>Contact</h2>
